# batoi-classroom-suite

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md
.claude/: settings.json
.github/: DISCUSSIONS.md  LABELS.md  PULL_REQUEST_TEMPLATE.md
assets/: README.md
boot-manager/: README.md
builder/: README.md
cli/: README.md  pyproject.toml
cli/src/bcs/: __init__.py  __main__.py  app.py  argv_normalize.py  color.py  context.py  errors.py  exit_codes.py  logging_setup.py  model_utils.py  output.py  plugins.py  ulid.py
cli/src/bcs/builder/: __init__.py  context.py  errors.py  execution.py  manifest.py  models.py  pipeline.py  protocols.py  stages.py  workspace.py
cli/src/bcs/commands/: __init__.py  doctor.py  inventory.py  stubs.py  validate.py  version.py
cli/src/bcs/config/: __init__.py  loader.py  models.py  overrides.py  preferences.py  validator.py
cli/src/bcs/inventory/: __init__.py  collectors.py  models.py  service.py
cli/src/bcs/inventory/discovery/: __init__.py  models.py  orchestrator.py
cli/src/bcs/platform/: __init__.py  errors.py  execution.py  models.py
cli/src/bcs/platform/adapters/: __init__.py
cli/src/bcs/platform/adapters/efi/: __init__.py  adapter.py  errors.py  models.py  parser.py
cli/src/bcs/platform/adapters/filesystem/: __init__.py  adapter.py  errors.py  models.py  parser.py
cli/src/bcs/platform/adapters/network/: __init__.py  adapter.py  errors.py  models.py  parser.py
cli/src/bcs/platform/adapters/secureboot/: __init__.py  adapter.py  errors.py  models.py  parser.py
cli/src/bcs/platform/adapters/storage/: __init__.py  adapter.py  errors.py  models.py  parser.py
cli/tests/: conftest.py  fake_command_runner.py  fixture_utils.py  test_app_cli.py  test_argv_normalize.py  test_builder_context.py  test_builder_errors.py  test_builder_execution.py  test_builder_manifest.py  test_builder_models.py  test_builder_pipeline.py  test_builder_protocols.py  test_builder_stages.py  test_builder_workspace.py  test_color.py  test_command_runner_wiring.py  test_commands_doctor.py  test_commands_inventory.py  test_commands_stubs.py  test_commands_validate.py  test_commands_version.py  test_config_loader.py  test_config_models.py  test_config_overrides.py  test_config_preferences.py  test_config_validator.py  test_context.py  test_end_to_end.py  test_errors.py  test_exit_codes.py  test_fixture_utils.py  test_host_discovery_pipeline.py  test_host_discovery_wiring.py  test_inventory_collectors.py  test_inventory_discovery_models.py  test_inventory_discovery_orchestrator.py  test_inventory_models.py  test_inventory_service.py  test_logging_setup.py  test_main_entry.py  (+26 more)
cli/tests/fixtures/: README.md
cli/tests/fixtures/filesystem/: README.md
cli/tests/fixtures/firmware/: README.md
cli/tests/fixtures/network/: README.md
cli/tests/fixtures/secureboot/: README.md
cli/tests/fixtures/storage/: README.md
config/: schema.yaml
deploy/: README.md
docs/: BETA_DASHBOARD.md  BETA_PREPARATION_REPORT.md  BETA_READINESS_REPORT.md  BETA_RELEASE_CHECKLIST.md  BETA_ROADMAP.md  BETA_VALIDATION_AUTOMATION.md  BETA_VALIDATION_PLAN.md  BUILDER_ARCHITECTURE.md  BUILDER_PIPELINE.md  CLI.md  COLLECTOR_CALL_GRAPH.md  COLLECTOR_USAGE_CENSUS.md  CONFIGURATION.md  EFI_ADAPTER.md  FILESYSTEM_ADAPTER.md  HARDWARE_MATRIX.md  HARDWARE_VALIDATION_MATRIX.md  HDO_MIGRATION_PLAN.md  (+37 more)
(+71 files in other folders)
