[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bcs"
version = "0.1.0"
description = "bcs - the Batoi Classroom Suite command-line interface"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "CIPFP Batoi" }]
keywords = ["bcs", "lliurex", "classroom", "cli"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<16.0",
  "pydantic>=2.6,<3.0",
  "pyyaml>=6.0,<7.0",
]

[project.scripts]
bcs = "bcs.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bcs"]

# ---------------------------------------------------------------------------
# Ruff - see ../docs/standards/coding-standards.md and repository conventions.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "C4",  # comprehensions
  "SIM", # simplify
  "RUF", # ruff-specific
  "N",   # pep8-naming
  "S",   # bandit (security)
  "T20", # no leftover print() outside intended CLI output helpers
  "ARG", # unused arguments
  "BLE", # blind except - every broad `except Exception` must be a reviewed, justified choice
  "PLR", # pylint refactor (e.g. too-many-arguments), justified per noqa where it fires
]
ignore = [
  "S603", # subprocess call - reviewed case by case (plugin dispatch)
  "S607", # partial executable path - PATH lookup is the documented plugin mechanism
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S108", "T20", "ARG001", "ARG002", "PLR2004"]
"src/bcs/commands/*" = ["T20"] # Rich/typer console output is the intended "print" surface
"src/bcs/__main__.py" = ["T20"] # the one place bcs prints a final error message before exiting

[tool.ruff.lint.isort]
known-first-party = ["bcs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["bcs"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=bcs --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["bcs"]
branch = true

[tool.coverage.report]
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
